[DevTools] Fix performance problems with OOPIFs

- linear lookup changed to map;
- NotifyNavigated just once per frame;
- do not attach to service worker from each OOPIF.

Bug: 805757
Change-Id: I1c912cf52fb74afc5eeb8a9fe8ae35f422eda8c9