content/browser/devtools/devtools_agent_host_impl.h
@@ -70,7 +70,7 @@ class CONTENT_EXPORT DevToolsAgentHostImpl : public DevToolsAgentHost {
   virtual void InspectElement(DevToolsSession* session, int x, int y);
 
   void NotifyCreated();
-  void NotifyNavigated(DevToolsAgentHostImpl* host);
+  void NotifyNavigated();
   void ForceDetachAllClients();
   DevToolsIOContext* GetIOContext() { return &io_context_; }
 
