content/browser/devtools/render_frame_devtools_agent_host.h
@@ -128,6 +128,7 @@ class CONTENT_EXPORT RenderFrameDevToolsAgentHost
   void MaybeReattachToRenderFrame();
   void GrantPolicy();
   void RevokePolicy();
+  void SetFrameTreeNode(FrameTreeNode* frame_tree_node);
 
 #if defined(OS_ANDROID)
   device::mojom::WakeLock* GetWakeLock();
